Added Images to Services

--- a/akuaa/templates/akuaa/service.html
+++ b/akuaa/templates/akuaa/service.html
@@ -11,55 +11,57 @@
         <div class="row">
             <div class="col-md-4 pb-3 d-flex justify-content-center">
                 <div class="card">
-                    <img src="{% static 'akuaa/images/splash.jpg' %}" height="200px" alt="">
+                    <img src="{% static 'akuaa/images/talent-img.JPG' %}" height="200px" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Talent Management</h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore.</p>
+                        <p style="text-align: justify;" class="card-text">We attract and select candidates with the required skills and knowledge for further develepoment by providing feedback, coaching, and development opportunities.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 pb-3 d-flex justify-content-center">
                 <div class="card">
-                    <img src="{% static 'akuaa/images/splash.jpg' %}" height="200px" alt="">
-                    <div class="card-body">
-                        <h3 class="card-title">PR & Media Services</h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 pb-3 d-flex justify-content-center">
-                <div class="card">
-                    <img src="{% static 'akuaa/images/splash.jpg' %}" height="200px" alt="">
-                    <div class="card-body">
-                        <h3 class="card-title">Event Management</h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 pb-3 d-flex justify-content-center">
-                <div class="card">
-                    <img src="{% static 'akuaa/images/splash.jpg' %}" height="200px" alt="">
-                    <div class="card-body">
-                        <h3 class="card-title">Digital Marketing Services</h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore..</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 pb-3 d-flex justify-content-center">
-                <div class="card">
-                    <img src="{% static 'akuaa/images/splash.jpg' %}" height="200px" alt="">
+                    <img src="{% static 'akuaa/images/media-img.JPG' %}" height="200px" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Media Production</h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore.</p>
+                        <p style="text-align: justify;" class="card-text">Helping brands expand their reach by creating audio, video, or multimedia content for various forms of media, such as television, film, radio, online platforms, and advertising.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 pb-3 d-flex justify-content-center">
                 <div class="card">
-                    <img src="{% static 'akuaa/images/splash.jpg' %}" height="200px" alt="">
+                    <img src="{% static 'akuaa/images/event-img.JPG' %}" height="200px" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Event Management</h3>
+                        <p style="text-align: justify;" class="card-text">Experienced in offering strategic and result-oriented brand activations from Pop-up events, mobile tours to corporate events.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 pb-3 d-flex justify-content-center">
+                <div class="card">
+                    <img src="{% static 'akuaa/images/digital-img.JPG' %}" height="200px" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Digital Marketing Services</h3>
+                        <p style="text-align: justify;" class="card-text">We leverage on various tactics and strategies designed to help businesses increase brand awareness, generate leads drive sales, and build customers loyalty. Our services includes but not limited to SEO/SEM, PPC Advertising, Content Marketing, Email Marketing, Brand Management, Web Development, Programmatic, Mobile Apps & Analytics.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 pb-3 d-flex justify-content-center">
+                <div class="card">
+                    <img src="{% static 'akuaa/images/PR-img.PNG' %}" height="200px" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">PR & Media Services</h3>
+                        <p style="text-align: justify;" class="card-text">We offer strategic public relation services and maintain key media relationships with major stakeholders to build trust, credibility and reach. We also create and distribute content through various media channels to reach a wider audience and tell the brand story in a compelling way.</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-md-4 pb-3 d-flex justify-content-center">
+                <div class="card">
+                    <img src="{% static 'akuaa/images/influencer-img.JPG' %}" height="200px" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Influencer Management</h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore.</p>
+                        <p style="text-align: justify;" class="card-text">Giving a voice to your brand through influential people. Our team leverages on strategic and customized approach to match your brand to the right influencer.
+                            We offer the full package including identifying and recruiting influencers, negotiating terms and compensation, developing campaign strategies, and ensuring that influencers deliver high-quality content that aligns with the brand's values and messaging.</p>
                     </div>
                 </div>
             </div>
