--- a/akuaa/templates/akuaa/career.html
+++ b/akuaa/templates/akuaa/career.html
@@ -6,4 +6,82 @@
         <h4 class="page-title pt-4">Careers</h4>
     </div>
 </section>
+<section>
+    <div class="container">
+        <div class="pt-4 pb-4">
+            <h1 style="font-family: Merrimeter;" class="text-center">Join Da Spinstress LLC</h1>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <form style="background-color: #EEE; padding:10%" method="POST" class="pt-4">
+                    {% csrf_token %}
+                    <h3 style="font-family: Merrimeter;"  class="text-center">Fill the form below to submit your resume</h3>
+                    <div class="form-group">
+                        <label for="name">Full Name</label>
+                        <input type="text" class="form-control form-control-lg mt-2" id="name" name="name">
+                    </div>
+                    <div class="form-group mt-2">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control form-control-lg mt-2" id="email" name="email">
+                    </div>
+                    <div class="form-group mt-2">
+                        <label for="Phone">Phone Number</label>
+                        <input type="number" class="form-control form-control-lg mt-2" id="phone" name="phone">
+                    </div>
+                    <div class="form-group mt-2">
+                        <label for="position">What position are you applying for?</label>
+                        <input type="text" class="form-control form-control-lg mt-2" id="position" name="position">
+                    </div>
+                    <div class="form-group mt-2">
+                        <label for="location">Location</label>
+                        <input type="text" class="form-control form-control-lg mt-2" id="location" name="location">
+                    </div>
+                    <div class="form-group mt-2">
+                        <label for="linkedin">LinkedIn Profile</label>
+                        <input type="text" class="form-control form-control-lg mt-2" id="linkedin" name="linkedin">
+                    </div>
+                    <div class="form-group mt-2">
+                        <label for="portfolio">Portfilio</label>
+                        <input type="text" class="form-control form-control-lg mt-2" id="portfilio" name="portfolio">
+                    </div>
+                    <div class="form-group mt-2">
+                        <label for="authorize">Are you authorized to work in the United States for any employment?</label>
+                        <select class="custom-select my-1 mr-sm-2" id="authorize">
+                            <option selected>--</option>
+                            <option value="1">Yes</option>
+                            <option value="2">No</option>
+                        </select>
+                    </div>
+                    <div class="form-group mt-2">
+                        <label for="sponsorship">Do you now or in the future require sponsorship to continue working in the United States?</label>
+                        <select class="custom-select my-1 mr-sm-2" id="sponsorship">
+                            <option selected>--</option>
+                            <option value="1">Yes</option>
+                            <option value="2">No</option>
+                        </select>
+                    </div>
+                    <!-- <div class="form-group mt-2">
+                        <textarea type="text" class="form-control mt-2" id="message" name="message" rows="4"
+                            placeholder="Message"></textarea>
+                    </div> -->
+                    <div class="form-group mt-2">
+                        <label for="resume">Resume/CV</label>
+                        <input type="file" class="form-control-file" id="resume">
+                    </div>
+                    <div class="form-group mt-2">
+                        <label for="cover_letter">Cover Letter</label>
+                        <input type="file" class="form-control-file" id="cover_letter">
+                    </div>
+                        <button type="submit"
+                            class="btn btn-outline-secondary mt-2">Submit
+                        </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
