--- a/akuaa/templates/akuaa/about.html
+++ b/akuaa/templates/akuaa/about.html
@@ -13,7 +13,7 @@
                 <img class="d-none d-md-block" src="{% static 'akuaa/images/dj-bg.jpeg' %}" height="250px" alt="">
             </div>
             <div class="col-md-6">
-                <h2>About</h2>
+                <h2 style="font-family: 'Merriweather', serif;">About</h2>
                 <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate architecto velit
                     quasi ea doloribus. Totam, nobis blanditiis. Magnam dolor necessitatibus assumenda doloribus aliquid
                     laborum, quisquam vitae consequatur ut qui.</h4>
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h2>Mission</h2>
+                <h2 style="font-family: 'Merriweather', serif;">Mission</h2>
                 <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate architecto velit
                     quasi ea doloribus. Totam, nobis blanditiis. Magnam dolor necessitatibus assumenda doloribus aliquid
                     laborum, quisquam vitae consequatur ut qui.</h4>
@@ -43,7 +43,7 @@
                 <img class="d-none d-md-block" src="{% static 'akuaa/images/dj-bg.jpeg' %}" height="250px" alt="">
             </div>
             <div class="col-md-6">
-                <h2>Vision</h2>
+                <h2 style="font-family: 'Merriweather', serif;">Vision</h2>
                 <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate architecto velit
                     quasi ea doloribus. Totam, nobis blanditiis. Magnam dolor necessitatibus assumenda doloribus aliquid
                     laborum, quisquam vitae consequatur ut qui.</h4>
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="skills">
-                    <h4>My Skills</h4>
+                    <h4 style="font-family: 'Merriweather', serif;">My Skills</h4>
                     <div class="detail">
                         <span class="display7">Djing</span>
                         <span class="display-8">95%</span>
