--- a/akuaa/templates/akuaa/base.html
+++ b/akuaa/templates/akuaa/base.html
@@ -21,6 +21,11 @@
 </head>
 <!-- 3A1078, 4E31AA, 2F58CD, 3795BD -->
 <style>
+  .required::after {
+    content: "*";
+    color: #2F58CD;
+    font-size: 20px;
+  }
   /* Navbar */
 
   .nav-link {
@@ -98,9 +103,9 @@
   }
 
   .welcome {
-    padding-top: 20%;
+    padding-top: 30%;
     position: relative;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
@@ -823,8 +828,8 @@
   .section-title {
     flex: 0 0 100%;
     max-width: 100%;
-    margin-bottom: 80px;
-    margin-top: 40px;
+    margin-bottom: 30px;
+    margin-top: 20px;
     text-align: center;
   }
 
@@ -1071,7 +1076,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 pt-5">
-          <h3 class="footer-title">Useful Links</h3>
+          <h3 style="font-family: 'Merriweather', serif;" class="footer-title">Useful Links</h3>
           <div class="pt-3">
             <ul>
               <li class="footer-list">
@@ -1096,7 +1101,7 @@
           </div>
         </div>
         <div class="col-md-3 pt-5">
-          <h3 class="footer-title">Our Services</h3>
+          <h3 style="font-family: 'Merriweather', serif;" class="footer-title">Our Services</h3>
           <div class="pt-3">
             <ul>
               <li class="footer-list">
@@ -1121,7 +1126,7 @@
           </div>
         </div>
         <div class="col-md-3 pt-5">
-          <h3 class="footer-title">Contact Us</h3>
+          <h3 style="font-family: 'Merriweather', serif;" class="footer-title">Contact Us</h3>
           <div class="footer-text pt-3">
             <h6>10 Marsh lane, Elkton, Maryland, 21921, United States</h6>
             <br>
@@ -1130,7 +1135,7 @@
           </div>
         </div>
         <div class="col-md-3 pt-5">
-          <h3 class="footer-title">About DaSpinstress</h3>
+          <h3 style="font-family: 'Merriweather', serif;" class="footer-title">About DaSpinstress</h3>
           <div class="footer-text pt-3">
             <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
           </div>
