--- a/akuaa/templates/akuaa/home.html
+++ b/akuaa/templates/akuaa/home.html
@@ -117,32 +117,26 @@
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
                     <div class="testimonial4_slide">
-                        <img src="https://i.ibb.co/8x9xK4H/team.jpg" class="img-circle img-responsive" />
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley of type and scrambled it to make a type specimen book. </p>
-                        <h4>Newman</h4>
-                        <h4>Graphic Designer</h4>
+                        <img src="{% static 'akuaa/images/testimonial-profile.png' %}" class="img-circle img-responsive" />
+                        <p>If you're looking for a reliable agency to handle your brand, look no further than DaSpinstress LLC. Their services are top-notch, and their commitment to delivering great service is unparalleled</p>
+                        <h4>Candice A</h4>
+                        <h4>Entrepreneur</h4>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="testimonial4_slide">
-                        <img src="https://i.ibb.co/8x9xK4H/team.jpg" class="img-circle img-responsive" />
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley of type and scrambled it to make a type specimen book. </p>
-                        <h4>Client 2</h4>
-                        <h4>Graphic Designer</h4>
+                        <img src="{% static 'akuaa/images/testimonial-profile.png' %}" class="img-circle img-responsive" />
+                        <p> Working with DaSpinstress was a great experience. They were professional, knowledgeable, and provided quality results in a timely manner. I would highly recommend them to anyone in need of digital marketing services.</p>
+                        <h4>Zane</h4>
+                        <h4>Product Manager</h4>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="testimonial4_slide">
-                        <img src="https://i.ibb.co/8x9xK4H/team.jpg" class="img-circle img-responsive" />
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley of type and scrambled it to make a type specimen book. </p>
-                        <h4>Client 3</h4>
-                        <h4>Graphic Designer</h4>
+                        <img src="{% static 'akuaa/images/testimonial-profile.png' %}" class="img-circle img-responsive" />
+                        <p>I've been working with DaSpinstress for abuut 2 years, and I can confidently say that they are the best in the market. Their commitment to sustainability is also a huge plus.</p>
+                        <h4>Paul T</h4>
+                        <h4>Product Manager</h4>
                     </div>
                 </div>
             </div>
@@ -162,7 +156,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 d-flex justify-content-center">
-                <div class="card" style="width: 20rem;">
+                <div class="card mb-3" style="width: 20rem;">
                     <img src="{% static 'akuaa/images/foundation.jpeg' %}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4 class="card-title">Card title</h4>
@@ -173,7 +167,7 @@
                 </div>
             </div>
             <div class="col-md-4 d-flex justify-content-center">
-                <div class="card" style="width: 20rem;">
+                <div class="card mb-3" style="width: 20rem;">
                     <img src="{% static 'akuaa/images/foundation.jpeg' %}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4 class="card-title">Card title</h4>
@@ -184,7 +178,7 @@
                 </div>
             </div>
             <div class="col-md-4 d-flex justify-content-center">
-                <div class="card" style="width: 20rem;">
+                <div class="card mb-3" style="width: 20rem;">
                     <img src="{% static 'akuaa/images/foundation.jpeg' %}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4 class="card-title">Card title</h4>
