--- a/akuaa/templates/akuaa/contact.html
+++ b/akuaa/templates/akuaa/contact.html
@@ -10,27 +10,27 @@
 <section class="contact-form pt-5">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <h3>Contact Us</h3>
+            <div class="col-md-6 pb-3">
+                <h3 style="font-family: 'Merriweather', serif;">Contact Us</h3>
                 <div class="pt-3">
-                    <img src="" height="25px" width="35px" alt="">
+                    <img src="{% static 'akuaa/images/location.png' %}" height="25px" width="35px" alt="">
                     <span style="font-weight: bold;">Address:</span><span> 10 Marsh lane, Elkton, Maryland, 21921, United States</span>
                 </div>
                 <div class="mt-5">
-                    <img src="" height="25px" width="35px" alt="">
+                    <img src="{% static 'akuaa/images/mail.png' %}" height="25px" width="35px" alt="">
                     <span style="font-weight: bold;">Email:</span><span> info@daspinstressllc.com</span>
                 </div>
                 <div class="mt-5">
-                    <img src="" height="25px" width="35px" alt="">
+                    <img src="{% static 'akuaa/images/phone.png' %}" height="25px" width="35px" alt="">
                     <span style="font-weight: bold;">Phone:</span><span> +1 (443) 655-3808</span>
                 </div>
                 <div class="mt-5">
-                    <img src="" height="25px" width="35px" alt="">
+                    <img src="{% static 'akuaa/images/website.png' %}" height="25px" width="35px" alt="">
                     <span style="font-weight: bold;">Website:</span><span> https://djakuaa.com/</span>
                 </div>
             </div>
             <div class="col-md-6">
-                <h3>Get in touch</h3>
+                <h3 style="font-family: 'Merriweather', serif;">Get in touch</h3>
                 <form method="POST" class="pt-2">
                     {% csrf_token %}
                     <div class="form-group">
