--- a/akuaa/templates/akuaa/service.html
+++ b/akuaa/templates/akuaa/service.html
@@ -6,7 +6,7 @@
         <h4 class="page-title pt-4">Services</h4>
     </div>
 </section>
-<section>
+<section class="pt-4">
     <div class="container">
         <div class="row">
             <div class="col-md-4 pb-3 d-flex justify-content-center">
