--- a/akuaa/templates/akuaa/home.html
+++ b/akuaa/templates/akuaa/home.html
@@ -104,6 +104,88 @@
         </div>
     </div>
 </section>
+
+<section class="counter-bg pt-4">
+    <div class="container">
+        <div class="row counter-row">
+            <div class="col-lg-12 counter-img">
+                <div class="column">
+                    <div class="card-img">
+                        <img src="{% static 'akuaa/images/followers.png' %}" height="50px" alt="icon">
+                        <h3 class="pt-3">21.1K</h3>
+                        <p style="font-size: 20px; font-weight:bold;">Followers</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card-img">
+                        <img src="{% static 'akuaa/images/award.png' %}" height="50px" alt="icon">
+                        <h3 class="pt-3">50+</h3>
+                        <p style="font-size: 20px; font-weight:bold;">Awards</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card-img">
+                        <img src="{% static 'akuaa/images/client.png' %}" height="50px" alt="icon">
+                        <h3 class="pt-3">100+</h3>
+                        <p style="font-size: 20px; font-weight:bold;">Business Clients</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card-img">
+                        <img src="{% static 'akuaa/images/track.png' %}" height="50px" alt="icon">
+                        <h3 class="pt-3">30+</h3>
+                        <p style="font-size: 20px; font-weight:bold;">Track Record</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="latest-news">
+    <div class="section-title">
+        <h1>Latest News</h1>
+        <br>
+        <br>
+        <p style="font-family: 'Dancing Script', cursive;">Latest news from us</p>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 d-flex justify-content-center">
+                <div class="card mb-3" style="width: 20rem;">
+                    <img src="{% static 'akuaa/images/foundation.jpeg' %}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <h5 class="card-text">content</h5>
+                        <a href="">Read More</a>
+                        <small>date</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center">
+                <div class="card mb-3" style="width: 20rem;">
+                    <img src="{% static 'akuaa/images/foundation.jpeg' %}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <h5 class="card-text">content</h5>
+                        <a href="">Read More</a>
+                        <small>date</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center">
+                <div class="card mb-3" style="width: 20rem;">
+                    <img src="{% static 'akuaa/images/foundation.jpeg' %}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <h5 class="card-text">content</h5>
+                        <a href="">Read More</a>
+                        <small>date</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="testimonial text-center">
     <div class="container">
 
@@ -146,48 +228,6 @@
             <a class="carousel-control-next" href="#testimonial4" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </a>
-        </div>
-    </div>
-</section>
-<section class="latest-news">
-    <div class="section-title">
-        <h1>Latest News</h1>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 d-flex justify-content-center">
-                <div class="card mb-3" style="width: 20rem;">
-                    <img src="{% static 'akuaa/images/foundation.jpeg' %}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <h5 class="card-text">content</h5>
-                        <small>author</small>
-                        <small>date</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 d-flex justify-content-center">
-                <div class="card mb-3" style="width: 20rem;">
-                    <img src="{% static 'akuaa/images/foundation.jpeg' %}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <h5 class="card-text">content</h5>
-                        <small>author</small>
-                        <small>date</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 d-flex justify-content-center">
-                <div class="card mb-3" style="width: 20rem;">
-                    <img src="{% static 'akuaa/images/foundation.jpeg' %}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <h5 class="card-text">content</h5>
-                        <small>author</small>
-                        <small>date</small>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </section>
