added contact model

--- a/akuaa/templates/akuaa/base.html
+++ b/akuaa/templates/akuaa/base.html
@@ -1037,7 +1037,7 @@
   /* ------------Counters--------------- */
 
   .counter-bg {
-    background-image: url("{% static 'akuaa/images/rate-bg1.jpg' %}");
+    background-image: url("{% static 'akuaa/images/rate-bg.JPG' %}");
     background-repeat: no-repeat;
     background-size: cover;
   }
